--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
